added some styles

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </section>
 
   <section class="benefits">
-    <div class="container">
+    <div class="container benefit_div">
       <h2>Benefits for Everyone</h2>
       <div class="benefit-list">
         <ul>
@@ -55,9 +55,9 @@
   </section>
 
   <section class="about">
-    <div class="container">
+    <div class="container first_container">
       <h2>Glimpse into the Future of AI-powered Operating Systems</h2>
-      <div>
+      <div class="second_container">
 
           <p>
             Gen-X is not just another voice assistant. It is the culmination of cutting-edge AI technology combined with the versatility of a shell executor, designed to streamline and revolutionize your computing experience across various operating systems.
